1.1.1 Jul 12th 2004
	- Added more documentation for using from PHP
	- Fixed compile errors and warnings

1.1.0 Apr 19th 2004
	- Added support for GeoIP Region, City, ISP and Organization ( Frank Mather )

1.0.6 Aug 30th 2002
	- Added GeoIP_delete upon cleanup ( Corris Randall )

1.0.5 Aug 29th 2002
	- Initial Release ( Corris Randall )