@@ -1,3 +1,6 @@
+	- Added support for GeoIP Netspeed Edition ( Frank Mather )
+	- Added support for GeoIP City setting GEOIP_LATITUDE, GEOIP_LONGITUDE, and GEOIP_POSTAL_CODE ( Frank Mather )
+
 1.1.1 Jul 12th 2004
 	- Added more documentation for using from PHP
 	- Fixed compile errors and warnings
